charts/security/tests/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: lnd-ops-namespaces
namespaceSelector:
  - name: protected
    labels:
      lnd-ops-security: protected
